--- a/README.Rmd
+++ b/README.Rmd
@@ -6,10 +6,10 @@ output: github_document
   README.md is generated from README.Rmd, so you should edit that file.
 -->
 
-```{r setup, include = FALSE}
+```{r, echo = FALSE}
 knitr::opts_chunk$set(collapse = TRUE,
                       comment  = NA,
                       fig.path = "man/figures/README-")
 ```
 
-# rnoaa
+# rnoaa <img src="man/figures/logo.png" align="right" width="120"/>
