Modifies the README file

--- a/README.Rmd
+++ b/README.Rmd
@@ -2,18 +2,18 @@
 output: github_document
 ---
 
-<!-- 
+<!--
   README.md is generated from README.Rmd, so you should edit that file.
 -->
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(collapse = TRUE,
                       comment  = NA,
-                      fig.path = "man/figures/README-", 
-                      fig.align = "center", 
-                      fig.height = 6, 
+                      fig.path = "man/figures/README-",
+                      fig.align = "center",
+                      fig.height = 6,
                       fig.width = 9,
-                      message = FALSE, 
+                      message = FALSE,
                       warning = FALSE)
 ```
 
@@ -39,8 +39,8 @@ This package allows you to get and clean the latest earthquake data from [the NO
 
 ```{r}
 library(rnoaa)
-# In case you do not have internet access, you can use the get_earthquake_data 
-# function, which is a snapshot of the quake's data on September 05, 2017:
+# In case you do not have internet access, you can use the get_earthquake_data
+# function, which is a snapshot of the quake's data on September 10, 2017:
 # raw_data <- get_earthquake_data()
 raw_data <- download_earthquake_data()
 # Basically, converts some important variables into the right format.
@@ -55,10 +55,10 @@ Once the data was tidied, `rnoaa` includes two ggplot2's geoms to visualize the 
 library(dplyr)
 library(ggplot2)
 clean_data %>%
-  filter(COUNTRY %in% c("CANADA", "USA", "MEXICO", 
-                        "CHINA", "JAPAN", "INDIA"),  
+  filter(COUNTRY %in% c("CANADA", "USA", "MEXICO",
+                        "CHINA", "JAPAN", "INDIA"),
          !is.na(EQ_PRIMARY),
-         YEAR %in% 2000:2016) %>% 
+         YEAR %in% 2000:2016) %>%
   ggplot(mapping = aes(x = DATE,
                        y = COUNTRY,
                        size = EQ_PRIMARY,
@@ -68,12 +68,12 @@ clean_data %>%
   geom_timeline() +
   geom_timeline_label(# We want to show the label for at most the two highest
                       # earthquakes by size.
-                      n_max = 2, 
-                      line_height = 1 / 4, 
-                      angle = 10, 
+                      n_max = 2,
+                      line_height = 1 / 4,
+                      angle = 10,
                       fontsize = 2.5) +
   labs(size = "Richter scale value",
-       color = "# deaths in thousands", 
+       color = "# deaths in thousands",
        y = "") +
   guides(size = FALSE) +
   theme_timeline()
@@ -84,8 +84,18 @@ Furthermore, it provides with functions to display the epicenters in an interact
 ```{r, eval = FALSE}
 clean_data %>%
   dplyr::filter(COUNTRY == "JAPAN" & lubridate::year(DATE) >= 2000) %>%
+  eq_map(annot_col = "DATE")
+```
+
+![](./man/figures/README-LeafletMap-1.png?raw=true)
+
+Also, it assists you to display the quake's traits from the data using popup text labels:
+
+```{r, eval = FALSE}
+clean_data %>%
+  dplyr::filter(COUNTRY == "MEXICO" & lubridate::year(DATE) == 2017) %>%
   dplyr::mutate(popup_text = eq_create_label(.)) %>%
   eq_map(annot_col = "popup_text")
 ```
 
-![](./man/figures/README-LeafletMap-1.png?raw=true)
+![](./man/figures/README-LeafletMap-2.png?raw=true)
