Modifies the README file and adds an example to the theme_timeline function

--- a/README.Rmd
+++ b/README.Rmd
@@ -103,3 +103,7 @@ clean_data %>%
 ## Documentation
 
 Please check the [package's vignette](./vignettes/using-rnoaa.Rmd) to see how the package works or review the examples given in the package's documentation (use `?function_name`); you can run them with the function `example` (e.g., `example("geom_timeline_label")`).
+
+## Unit Testing
+
+In order to increase the quality of the package, a [set of tests](./tests/testthat) were carried out for each function using the `testthat` R package.
