Modifies the README file

--- a/README.Rmd
+++ b/README.Rmd
@@ -66,6 +66,8 @@ set.seed(48)
 clean_data %>%
   select(YEAR, MONTH, DAY, DATE, COUNTRY, LOCATION_NAME) %>%
   sample_n(6)
+#   N.B.: When the month or/and day is/are missing, the date is approximated
+#         at the midpoint of the period.
 ```
 
 Once the data was tidied, `rnoaa` includes two ggplot2's geoms to visualize the timeline in which the quakes have ocurred and label the ones with the greater magnitude:
